<resources>
    <string name="app_name" translatable="false">MyMovies</string>
    <string name="drawer_closed">Fechado</string>
    <string name="registry_saved">Registo guardado</string>
    <string name="no_movies_available">Sem dados disponíves</string>
    <string name="dashboard">Painel de Informações</string>
    <string name="map">Mapa:</string>
    <string name="movies_list">Lista de Filmes</string>
    <string name="movies_map">Mapa</string>
    <string name="about">Sobre</string>
    <string name="about_text">Esta aplicação é um trabalho para a UC de Computação Móvel do curso de Engenharia Informática da Universidade Lusófona de Humanidades e Tecnologia</string>
    <string name="about_credit">Feito por: Duarte Cambra</string>

    <string name="info_not_available">Informação não disponível</string>
    <string name="location">Localização:</string>
    <string name="created">Criado em:</string>
    <string name="updated">Atualizado em:</string>

    <string name="this_week">Esta semana</string>


    <string name="registered_at">Registado em:</string>
    <string name="pictures">Fotografias (opcional):</string>
    <string name="pictures2">Fotografia</string>
    <string name="observations">Observações (opcional)</string>

    <string name="title">Título</string>
    <string name="nameHint">Nome</string>
    <string name="movie_theater">Cinema</string>
    <string name="date">Data</string>
    <string name="hour">Hora:</string>

    <string name="report_movie">Registo filme</string>

    <string name="form_title">Registo de filme</string>
    <string name="dialog_message">Deseja confirmar?</string>
    <string name="submit">Submeter</string>

    <string name="name_error">Introduza um filme válido</string>
    <string name="cinema_error">Introduza um cinema válido</string>

    <string name="dialog_title">Confirmação</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="yes_choice">Registou o filme com sucesso!</string>
    <string name="no_choice">Cancelou o registo</string>
    <string name="not_available">Não disponível</string>
    <string name="distance">Distância (m):</string>
    <string name="away">m de ti</string>
    <string name="reportNow">Reporta Já!</string>
    <string name="location_not_found">A localização não foi encontrada</string>
    <string name="apply">Aplicar</string>
    <string name="sort">Ordenar</string>
    <string name="closer">Mais perto de mim</string>
    <string name="farther">Mais longe de mim</string>
    <string name="evaluation_hint">Avaliação</string>
    <string name="drawer_open">Aberto</string>
    <string name="genre">Género</string>
    <string name="evaluation">Avaliação</string>
    <string name="cinema_text">Escolher cinema</string>
    <string name="evaluation_error">Insira um valor de 1 a 10</string>
    <string name="movie_unexistent">Filme não existente!</string>
    <string name="date_watched">Data visualização</string>
    <string name="observations_text">Observações</string>
    <string name="date_premiere">Data estreia</string>
    <string name="synopsis">Sinopse</string>
    <string name="avg_evaluation">Avaliação (média)</string>
    <string name="link" translatable="false">Link</string>
    <string name="movie_correct">O filme é o correto?</string>
    <string name="this_month">Este mês</string>
    <string name="this_year">Este ano</string>
    <string name="today">Hoje</string>


</resources>