<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="35dp"
        android:text="@string/form_title"
        android:textColor="@color/black"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/cinema_text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:text="@string/date"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/evaluation_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/observations"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/observations"
        android:ems="10"
        android:hint="@string/observations"
        android:maxLength="200"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/text_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/pictures"
        android:textColor="@color/black"
        android:textSize="20sp"/>




    <ImageView
        android:id="@+id/image"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/upload">

    </ImageView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/gray"
            android:text="@string/submit" />


    </LinearLayout>



</LinearLayout>