<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="378dp"
        android:layout_height="134dp">

        <!--ImageVIew to display our Course Image-->


        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/text_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/text_date"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/evaluation"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/text_evaluation"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="30dp"
            android:text="@string/evaluation"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="55dp"
            android:layout_toEndOf="@+id/text_distance"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="55dp"
            android:text="@string/distance"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/cinema"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="80dp"
            android:layout_toEndOf="@+id/text_cinema"
            android:drawablePadding="2dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="80dp"
            android:text="@string/movie_theater"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_date"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/genre"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/genre"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_date"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/text_genre"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />




    </RelativeLayout>
</androidx.cardview.widget.CardView>


