<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/gray"
    >

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dashboard_box"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        card_view:cardBackgroundColor="@color/light_gray"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="70sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardBackgroundColor="@color/bege"
                card_view:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/movies_today"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-170dp"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardBackgroundColor="@color/bege">
                <TextView
                    android:id="@+id/movies_this_week"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-170dp"
                    android:text="@string/this_month"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                card_view:cardBackgroundColor="@color/bege"
                card_view:cardCornerRadius="20dp">
                <TextView
                    android:id="@+id/movies_this_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-170dp"
                    android:text="@string/this_week"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                card_view:cardCornerRadius="20dp"
                card_view:cardBackgroundColor="@color/bege">
                <TextView
                    android:id="@+id/movies_this_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-170dp"
                    android:text="@string/this_year"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>